--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,21 @@
 {
-    "name": "blog",
-    "version": "0.0.0",
-    "dependencies": {
-        "angular-animate": "~1.4.0",
-        "angular-cookies": "~1.4.0",
-        "angular-sanitize": "~1.4.0",
-        "angular-resource": "~1.4.0",
-        "angular-route": "~1.4.0",
-        "angular-material": "~0.9.7",
-        "animate.css": "~3.3.0",
-        "angular": "~1.4.0",
-        "angular-websql": "~1.0.2"
-    },
-    "devDependencies": {
-        "angular-mocks": "~1.4.0"
-    },
-    "resolutions": {
-        "angular": "~1.4.0"
-    }
+  "name": "blog",
+  "version": "0.0.0",
+  "dependencies": {
+    "angular-animate": "~1.4.0",
+    "angular-cookies": "~1.4.0",
+    "angular-sanitize": "~1.4.0",
+    "angular-resource": "~1.4.0",
+    "angular-material": "~0.9.7",
+    "animate.css": "~3.3.0",
+    "angular": "~1.4.0",
+    "angular-websql": "~1.0.2",
+    "angular-ui-router": "~0.2.15"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.4.0"
+  },
+  "resolutions": {
+    "angular": "~1.4.0"
+  }
 }
