--- a/bower.json
+++ b/bower.json
@@ -2,15 +2,16 @@
   "name": "blog",
   "version": "0.0.0",
   "dependencies": {
+    "angular": "~1.4.0",
     "angular-animate": "~1.4.0",
     "angular-cookies": "~1.4.0",
-    "angular-sanitize": "~1.4.0",
-    "angular-resource": "~1.4.0",
     "angular-material": "~0.9.7",
-    "animate.css": "~3.3.0",
-    "angular": "~1.4.0",
+    "angular-resource": "~1.4.0",
+    "angular-sanitize": "~1.4.0",
+    "angular-ui-router": "~0.2.15",
     "angular-websql": "~1.0.2",
-    "angular-ui-router": "~0.2.15"
+    "animate.css": "~3.3.0",
+    "moment": "~2.10.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
