--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-ui-router": "~0.2.15",
     "angular-websql": "~1.0.2",
     "animate.css": "~3.3.0",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "ngstorage": "~0.3.9"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
